# technical-backup

./: README.md
.github/workflows/: docker-image.yml
angular/: .gitignore  README.md  angular.json  package.json
angular/src/: main.ts
angular/src/app/: app.ts
capacitor/: .ncurc.json  README.md  capacitor.config.js  capacitor.config.mjs  eslint.config.mjs  package.json  rsbuild.config.mjs  rsbuild.config.ts  tsconfig.json
capacitor-cypress/: README.md  cypress.config.ts  package.json
capacitor-cypress/cypress/action/: index.tsx
capacitor-cypress/cypress/page/: Home.ts  NotFound.ts  index.ts
capacitor/src/: App.tsx  index.tsx
capacitor/src/api/: Git.tsx  LongTermTask.tsx  Resource.tsx  index.tsx
capacitor/src/i18n/: en-US.json  zh-CN.json
capacitor/src/model/: PaginationModel.tsx  UserModel.tsx  VerificationCodeEmailModel.tsx
capacitor/src/router/: index.tsx
capacitor/src/service/: StorageSpaceService.tsx
dioxus/: .gitignore  Cargo.toml  Dioxus.toml  README.md  index.html  rustfmt.toml  tailwind-config.js  tailwind.css
dioxus-cypress/: README.md  package.json
dioxus-cypress/cypress/action/: index.ts
dioxus-cypress/cypress/page/: Blog.ts  Home.ts  index.ts
dioxus/.cargo/: config.toml
dioxus/.zed/: settings.json
dioxus/assets/: google_material.css  google_robot_font.css  stylance.bundled.css  tailwind.css
dioxus/assets/common/app/: app.css
dioxus/assets/common/daisyui/v5.5.4/: daisyui.css
dioxus/assets/common/google-material/: google-robot-font.css
dioxus/assets/common/google_material/: google_robot_font.css
dioxus/assets/common/jetbrains-mono-font/: jetbrains-mono.css
dioxus/assets/common/tailwind/: tailwind.css
dioxus/assets/google_material/: google_robot_font.css
dioxus/assets/i18n/: en-US.ftl
dioxus/assets/styling/: app.css  blog.css  main.css  navbar.css  navbar.module.css
dioxus/public/: pm2-serve.js  sws.toml
dioxus/src/: app.rs  main.rs
dioxus/src/api/: authorization.rs
dioxus/src/common/i18n/: mod.rs  use_app_i18n.rs
dioxus/src/component/: blog.rs  game_button.rs  game_input.rs  hero.rs  mod.rs  navbar.rs
dioxus/src/component/home/: game_input.rs  hero.rs  mod.rs
dioxus/src/component/system_menu/: check_page_permission_component.rs  check_router_permission_component.rs  loading_or_error_component.rs  mod.rs  system_menu.rs
dioxus/src/components/: game.rs  game_button.rs  game_input.rs  hero.rs  mod.rs
dioxus/src/constant/: app_assets_constant.rs  color_constant.rs  image_constant.rs  mod.rs  server_constant.rs
dioxus/src/enums/: animal_enum.rs
dioxus/src/model/: app_check_permission_model.rs  cat_model.rs  mod.rs  organize_model.rs  pagination_model.rs  pagination_read_only_model.rs  user_email_model.rs  user_model.rs  user_read_only_model.rs
dioxus/src/route/: blog.rs  blog_page.rs  home.rs  home_page.rs  mod.rs  navbar.rs
dioxus/src/router/: blog_page.rs  home_page.rs  mod.rs  not_found_page.rs
docker/: README.md  package.json  tsconfig.json
docker/src/: docker_build.js
docker/src/AliyunCloud/: Dockerfile
docker/src/capacitor/: Dockerfile
docker/src/client/: Dockerfile
docker/src/cloud/: Dockerfile
docker/src/dioxus/: Dockerfile
docker/src/electron/: Dockerfile
docker/src/ffcreator/: Dockerfile
docker/src/rust/: Dockerfile
docker/src/server/: Dockerfile
electron/: .ncurc.json  README.md  config-overrides.js  electron-eslint.config.js  electron-eslint.config.mjs  electron.eslint.js  electron.eslintrc.js  eslint.config.mjs  package.json  rsbuild.config.mjs  rsbuild.config.ts  tsconfig.electron.main.json  tsconfig.json
electron-playwright/: .ncurc.json  README.md  package.json  tsconfig.json
electron-playwright/src/: index.ts
electron-playwright/src/action/: index.ts
electron-playwright/src/page/: Game.ts  Home.ts  index.ts
electron-playwright/test/Game/: Game-EnterTheGame.spec.ts  Game-RotateDown.spec.ts  Game-RotateLeft.spec.ts  Game-RotateRight.spec.ts  Game-RotateUp.spec.ts
electron-playwright/test/Home/: Home-TheHomePageShouldOpen.spec.ts
electron/main/: index.tsx  tsconfig.json
electron/main/util/: GetBuildFolderPathUtil.tsx  GetPublicFolderPathUtil.tsx  IsLoadedUtil.tsx  IsNotShowForTestUtil.tsx  IsPackagedUtil.tsx  LoadWindowFromRelativeUrlUtil.tsx  StorageUtil.tsx
electron/main/window/: HomeWindow.tsx
electron/src/: App.tsx  index.tsx
electron/src/api/: index.tsx
electron/src/i18n/: en-US.json  zh-CN.json
electron/src/model/: PaginationModel.tsx  StorageSpaceModel.tsx
electron/src/remote/: index.tsx
electron/src/router/: index.tsx
electron/src/service/: StorageSpaceService.tsx  index.tsx
ffcreator/: .ncurc.json  README.md  package.json
ffcreator/src/: ImageOnCenter.ts
ffcreator/test/: GenerateVideo.spec.ts
react/: .ncurc.json  README.md  package.json  rsbuild.config.ts  tsconfig.json
react-cypress/: README.md  package.json  tsconfig.json
react-cypress/cypress/action/: index.ts
react/src/: App.tsx  index.tsx
rust/: Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
rust/.cargo/: config.toml
rust/.zed/: settings.json
rust/src/: main.rs
rust/src/action/: mod.rs
rust/src/action/buy_phone/: jerry_buy_phone.rs  mod.rs  tom_buy_phone.rs
rust/src/action/catch_example/: catch_example.rs  mod.rs
rust/src/action/downcast_example/: downcast_example.rs  mod.rs
rust/src/action/eat_food/: eat_apple.rs  tom_eat_apple.rs
rust/src/action/json_example/: mod.rs  user_json.rs
rust/src/action/non_blocking_async_task/: mod.rs  non_blocking_async_task.rs
rust/src/action/pagination/: pagination.rs
rust/src/action/print_global_username/: mod.rs  print_username.rs
rust/src/action/show_animal/: mod.rs  print_all_animal.rs
rust/src/action/spawn_blocking_async_task/: mod.rs  spawn_blocking_async_task.rs
rust/src/api/: authorization.rs
rust/src/constant/: global_user_constant.rs  mod.rs  server_constant.rs
rust/src/enums/: animal_enum.rs  mod.rs
rust/src/model/: iphone_model.rs  mod.rs  pagination_model.rs  pixel_model.rs  user_model.rs
rust/src/traits/: buy.rs
springboot/: README.md  pom.xml
(+392 files in other folders)
