[package]
name = "rust-app"
version = "0.1.0"
authors = ["john <zdu.strong@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
futures = "0.3.30"
serde_json = "1.0.138"
serde = { version = "1.0.203", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4", "js"] }
chrono = { version = "0.4.39", features = ["serde"] }
async-recursion = "1.0.5"
strum = "0.27.1"
strum_macros = "0.27.1"
async-trait = "0.1"
dioxus-sdk = { version = "0.6.0", features = ["storage"] }
dioxus-free-icons = { version = "0.9", features = ["font-awesome-brands", "font-awesome-solid", "font-awesome-regular"] }
dioxus-material = "0.3.0"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "json"] }
reqwest-websocket = { version = "0.5.1", features = ["json"] }

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
overflow-checks = true
incremental = false

[profile.android-dev]
inherits = "dev"
overflow-checks = true
incremental = false

[profile.server-dev]
inherits = "dev"
overflow-checks = true
incremental = false
