[package]
name = "rust-app"
version = "0.1.0"
authors = ["john <zdu.strong@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.2", features = ["router"] }
futures = "0.3.31"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.19.0", features = ["v4", "js"] }
chrono = { version = "0.4.42", features = ["serde"] }
async-recursion = "1.1.1"
strum = "0.27.2"
strum_macros = "0.27.2"
dioxus-sdk = { version = "0.7.0", features = ["storage"] }
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "json"] }
reqwest-websocket = { version = "0.5.1", features = ["json"] }
once_cell = "1.21.3"
tokio_with_wasm = { version = "0.8.7", features = ["full"] }
tokio = { version = "1.48.0", features = ["rt", "macros", "sync", "time", "io-util"] }
serde_with = "3.16.1"
dioxus-i18n = "0.4.3"
stylance = "0.7.4"
daisy_rsx = { git = "https://github.com/zdu-strong/temp-test-daisy-rsx.git", branch = "release-v0.1.50" }
bigdecimal = { version = "0.4.9", features = ["serde-json"] }
derive_more = { version = "2.1.0", features = ["display"] }

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]

[profile]

[profile.dev]
overflow-checks = true
incremental = false

[profile.wasm-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.server-dev]
inherits = "dev"
