[package]
name = "my"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
futures = "0.3.31"
uuid = { version = "1.18.1", features = ["v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
async-recursion = "1.1.1"
strum = "0.27.2"
strum_macros = "0.27.2"
async-trait = "0.1"
once_cell = "1.21.3"
serde_with = "3.16.1"
bigdecimal = { version = "0.4.9", features = ["serde-json"] }

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true

[profile.test]
overflow-checks = true

[profile.bench]
overflow-checks = true
